# todo_tauri

./: README.md  index.html  package.json
src/: App.jsx  main.jsx  styles.css
src-tauri/: .env  Cargo.toml  hello.db  tauri.conf.json
src-tauri/database/: coba.sqlite
src-tauri/migrations/: 20231215113901_todo.up.sql  20231216142036_todo.up.sql  20231216210229_users.up.sql
src-tauri/src/: main.rs  service_register.rs
src-tauri/src/abstract_trait/: mod.rs  todo.rs  todo_trait.rs  user_trait.rs
src-tauri/src/config/: config.rs  connection_pool.rs  database.rs  hash.rs  mod.rs  state.rs
src-tauri/src/domain/: mod.rs
src-tauri/src/domain/request/: todo.rs
src-tauri/src/domain/response/: mod.rs  todo.rs
src-tauri/src/dto/: mod.rs  user_claims.rs
src-tauri/src/handler_command/: auth_command.rs  mod.rs  todo.rs  todo_command.rs  user_command.rs
src-tauri/src/models/: mod.rs  todo.rs  todo_models.rs  user_models.rs
src-tauri/src/repository/: mod.rs  todo.rs  todo_repository.rs  user_repository.rs
src-tauri/src/service/: auth_service.rs  mod.rs  todo.rs  todo_service.rs  user_service.rs
src-tauri/src/utils/: errors.rs  log_tracing.rs  mod.rs
src/pages/: login.jsx  register.jsx  todo.jsx
src/pages/auth/: Login.jsx  Register.jsx
src/pages/auth/style/: login.css  register.css
src/pages/home/: Home.jsx  Test.jsx
src/pages/home/style/: home.css
src/store/: store.jsx  todo.jsx
