[package]
name = "todolist-sqlx-tauri"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "api-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1.74"
sqlx = { version = "0.7.3", features = ["chrono", "sqlite", "runtime-tokio-rustls"] }
dirs = "5.0.1"
camino = "1.1.6"
tokio = { version = "1.35.0", features = ["full"] }
thiserror = "1.0.51"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
anyhow = "1.0.75"
chrono = { version = "0.4.31", features = ["serde"] }
bcrypt = "0.15.0"
jsonwebtoken = "9.2.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
